<resources>
    <string name="app_name">BigCity</string>
    <string name="homepage">首页</string>
    <string name="licai">理财</string>
    <string name="more">更多</string>
    <string name="my" >我的</string>
    <string name="act_login_username">请输入用户名/手机号</string>
    <string name="act_login_password">请输入密码(6&#8211;16位数字和字母组合)</string>
    <string name="act_login_nozhanghao">没有账号?</string>
    <string name="act_login_zhuceyouli">注册即可领28888元体验金</string>
    <string name="act_login_forgetpassword">忘记密码?</string>
    <string name="act_login_login">登录</string>
    <string name="act_register_username">请输入手机号</string>
    <string name="act_register_imagecode">请输入图形验证码</string>
    <string name="act_register_phonecodehint">请输入手机验证码</string>
    <string name="act_register_requestcode">获取验证码</string>
    <string name="act_register_referrerhint">请输入推荐人(如无推荐人可不填写)</string>
    <string name="act_register_login">已有账号,去登录</string>
    <string name="act_register_agree" >注册即视为同意</string>
    <string name="act_register_tudouxieyi">《土豆金服服务协议》</string>
    <string name="act_affirm_title">确认密码</string>
    <string name="act_affirm_password2">确认新密码</string>
    <string name="act_affirm_complete">完成</string>
    <string name="act_find_title">找回密码</string>
    <string name="act_find_next">下一步</string>
    <string name="act_find_username">请输入手机号</string>
    <string name="act_register_register">注册</string>



    <!-- 图案解锁 -->
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="act_lock_welcom">欢迎您,XXXXXXXXXXX</string>
    <string name="act_lock_forget">忘记手势密码</string>
    <string name="act_lock_other">使用其他账号登录</string>
    <string name="errormoretimes">输入错误次数过多,请等待5分钟后再次重试</string>
    <string name="inputsucess">输入成功</string>
    <string name="act_drawgesture_pass">直接跳过</string>
    <string name="act_drawgesture_error">手势密码前后输入不一致,请重新输入</string>
    <string name="act_drawgesture_sucess">手势密码设置成功!</string>
    <string name="act_drawgesture_hint">手势密码不能少于4个连接点,请重新设置</string>
    <string name="mlockview_sucess">手势密码验证成功!</string>
    <string name="act_login_welcome">welcome</string>
    <string name="act_login_change">改变不美好\t\t\t\t创造更美好</string>
    <string name="act_login_usernamehint">请输入用户名</string>
    <string name="act_login_passwordhint">请输入密码</string>
    <string name="act_register_passwordhint">请设置8&#8211;20位登陆密码</string>
    <string name="act_login_sex">性别</string>
    <string name="act_login_women">女</string>
    <string name="act_login_men">男</string>
    <string name="act_login_register">登陆</string>
    <string name="act_login_registernow">立即注册</string>
    <string name="act_register_usernamehint">请设置用户名</string>
    <string name="act_register_loginnow">立即登陆</string>
    <string name="act_feedback_tvhint">您的声音 我们用心聆听</string>
    <string name="act_feedback_tvhint1">您的联系方式(可选)</string>
    <string name="act_feedback_send">发送</string>
    <string name="act_feedback_title">意见反馈</string>
    <string name="act_my_my">我的</string>
    <string name="act_my_sixin">私信</string>
    <string name="act_goodrecommend_title">好物推荐</string>
    <string name="act_sharkitoff_title">摇一摇</string>
    <string name="act_home_title">大城小事</string>
    <string name="frag_home_huzhuwenda">互助问答</string>
    <string name="frag_home_kaixinyike">开心一刻</string>
    <string name="frag_home_jiaojiaopengyou">交交朋友</string>
    <string name="frag_home_jingchenggonglve">京城攻略</string>
    <string name="act_relatedme_title">与我相关</string>
    <string name="act_discover_title">发现</string>
    <string name="frag_discover_title">发现</string>
    <string name="dachengxiaoshi">大城小事</string>
    <string name="xiaoxi">消息</string>
    <string name="frag_message_yuwoxiangguan">与我相关</string>
    <string name="touxiangurl">头像url</string>
    <string name="biaoti">标题</string>
    <string name="zhanshineirong">展示内容</string>
    <string name="peitu1">配图1</string>
    <string name="peitu3">配图3</string>
    <string name="peitu2">配图2</string>
    <string name="liulancishu">浏览次数</string>
    <string name="huifucishu">回复次数</string>
    <string name="tijiaoshuju">提交数据</string>
    <string name="shiyongleixing">适用类型--互助问答,开心一刻等</string>
    <string name="zuozhe">文章作者</string>
    <string name="wenzhangxiangqing">文章详情</string>
    <string name="wenzhangguanlitupiandizhi">文章关联图片地址</string>
    <string name="cancel">取消</string>
    <string name="zaicidianjijtcbgym">再次点击将退出该页面</string>
    <string name="dangtianriqidefabuid">当天日期的发布id,从1开始</string>
    <string name="angqianyemianmyzsxx">当前页面没有展示信息</string>
    <string name="dangqianyemianmyyxsdxx">当前页面没有要显示的信息!</string>
    <string name="qingtianjiazhengquedfl">请添加正确的分类</string>
    <string name="qingxiandenglu">请先登陆!</string>
    <string name="woyouhuayaoshuo" >我有话要说</string>
    <string name="bankuai">版块</string>
    <string name="qingshuruninybddzt">请输入您要表达的主题</string>
    <string name="zaizhelichangsyyb">在这里畅所欲言吧</string>
    <string name="qingxuanzeyaoshangchuandetupian">请点击此处选择要上传的图片</string>
    <string name="tianjiashujubiao">添加数据表</string>
    <string name="shujubaocunshibai">数据保存失败!</string>
    <string name="zhengzaichulitpqsh">正在处理图片,请稍候!</string>
    <string name="biaotibunengweikong">标题内容不能为空!</string>
    <string name="wenzhangneirongbunengweikong">文章内容不能为空!</string>
    <string name="xiangqing">详情</string>
    <string name="huifu">回复</string>
    <string name="meiyouxiangxineirong">没有详细内容</string>
    <string name="pinglun">评论</string>
    <string name="chiguaqunzhongyouhuashuo">吃瓜群众有话说</string>
    <string name="fasong">发送</string>
    <string name="zanshimeiyoupingluno">暂时没有评论哦!</string>
    <string name="pinglunneirongbunnegweikong">评论内容不能为空!</string>
    <string name="niyijingdianguozanla">你已经点过赞啦!</string>
    <string name="dianzanchenggong">点赞成功!</string>


</resources>
