<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:id="@+id/tv_act_addblogbmobbean_1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:gravity="center"
            android:text="@string/touxiangurl"
            android:textColor="@color/color_black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_act_addblogbmobbean_icon_url"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_act_addblogbmobbean_2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/biaoti"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_act_addblogbmobbean_3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:gravity="center"
            android:text="@string/zhanshineirong"
            android:textColor="@color/color_black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_act_addblogbmobbean_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/tv_act_addblogbmobbean_4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/peitu1"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_image_url1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_act_addblogbmobbean_5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/peitu2"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_image_url2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_act_addblogbmobbean_6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/peitu3"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_image_url3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/tv_act_addblogbmobbean_7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/liulancishu"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_image_priview_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/tv_act_addblogbmobbean_8"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/huifucishu"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_image_reply_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/tv_act_addblogbmobbean_9"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/shiyongleixing"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/tv_act_addblogbmobbean_10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/zuozhe"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_author"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/tv_act_addblogbmobbean_11"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/wenzhangxiangqing"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_details"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_act_addblogbmobbean_12"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/wenzhangguanlitupiandizhi"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_details_image_url"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_act_addblogbmobbean_13"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#a3a3"
            android:textColor="@color/color_black"
            android:text="@string/dangtianriqidefabuid"
            android:gravity="center"
            android:textSize="14sp"
            />
        <EditText
            android:id="@+id/et_act_addblogbmobbean_dateid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/act_feedback_tvcolor"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/color_black"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_act_addblogbmobbean_commit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="#a3a3"
            android:gravity="center"
            android:text="@string/tijiaoshuju"
            android:textColor="@color/color_black"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"

            />
    </LinearLayout>


</ScrollView>