<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/lv_register_close"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/themeColor"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_act_register_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/act_login_close"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="50sp"
        android:text="@string/act_login_welcome"
        android:gravity="center"
        android:textColor="@color/act_login_textcolor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/act_login_change"
        android:gravity="center"
        android:textColor="@color/act_login_textcolor"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/act_login_user"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />
        <EditText
            android:id="@+id/et_act_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="16sp"
            android:theme="@style/MyEditText"
            android:hint="@string/act_register_usernamehint"
            android:textColor="@color/act_login_etwhite"
            android:textColorHint="@color/act_login_etwhite"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:layout_marginRight="13dp"
            android:layout_marginEnd="13dp"
            android:background="@drawable/act_login_password"

            />
        <EditText
            android:id="@+id/et_act_register_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="16sp"
            android:theme="@style/MyEditText"
            android:hint="@string/act_register_passwordhint"
            android:textColor="@color/act_login_etwhite"
            android:textColorHint="@color/act_login_etwhite"
            />
    </LinearLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:gravity="center_vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    >
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_weight="1"
    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/act_login_sex"
    />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:text="@string/act_login_sex"
    android:textColor="@color/act_login_etwhite"
    android:textSize="16sp"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    />


    </LinearLayout>

    <LinearLayout

        android:id="@+id/ll_act_register_man"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_weight="1"
    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/act_login_men"
    />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:text="@string/act_login_men"
    android:textColor="@color/act_login_etwhite"
    android:textSize="16sp"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_act_register_woman"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_weight="1"
    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/act_login_women"
    />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:text="@string/act_login_women"
    android:textColor="@color/act_login_etwhite"
    android:textSize="16sp"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    />


    </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_act_register_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/act_register_register"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/xshape_roundrect_whitebac"
        android:textColor="@color/act_login_tvlogin"
        />

    <TextView
        android:id="@+id/tv_act_register_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/act_register_loginnow"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/act_login_etwhite"
        />

</LinearLayout>